--- a/Web.AdvertisementApp/Web.AdvertisementApp.Business/Web.AdvertisementApp.Business.csproj
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.Business/Web.AdvertisementApp.Business.csproj
@@ -7,16 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="DependencyResolvers\" />
-    <None Remove="DependencyResolvers\Microsoft\" />
-    <None Remove="ValidationRules\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DependencyResolvers\" />
-    <Folder Include="DependencyResolvers\Microsoft\" />
-    <Folder Include="ValidationRules\" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="FluentValidation" Version="11.9.1" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
@@ -26,5 +16,11 @@
     <ProjectReference Include="..\WebAdvertisementApp.Dtos\Web.AdvertisementApp.Dtos.csproj" />
     <ProjectReference Include="..\Web.AdvertisementApp.Common\Web.AdvertisementApp.Common.csproj" />
     <ProjectReference Include="..\Web.AdvertisementApp.DataAccess\Web.AdvertisementApp.DataAccess.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Helper\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helper\" />
   </ItemGroup>
 </Project>
