--- a/Web.AdvertisementApp/WebAdvertisementApp.Dtos/Web.AdvertisementApp.Dtos.csproj
+++ b/Web.AdvertisementApp/WebAdvertisementApp.Dtos/Web.AdvertisementApp.Dtos.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Interfaces\" />
-    <None Remove="ProvidedServiceDtos\" />
+    <None Remove="AdvertisementDtos\" />
+    <None Remove="AppUserDtos\" />
+    <None Remove="GenderDtos\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="ProvidedServiceDtos\" />
+    <Folder Include="AdvertisementDtos\" />
+    <Folder Include="AppUserDtos\" />
+    <Folder Include="GenderDtos\" />
   </ItemGroup>
 </Project>
