--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/appsettings.json
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "Local": "server=(localdb)\\mssqllocaldb; database=AdvertisementDb; integrated security=true;"
+    "Local": "Host=localhost; Port=5432; Database=AdvertisementDb; Username=postgres; Password=limonlukek1;"
   },
   "AllowedHosts": "*"
 }
