--- a/Web.AdvertisementApp/Web.AdvertisementApp.DataAccess/Web.AdvertisementApp.DataAccess.csproj
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.DataAccess/Web.AdvertisementApp.DataAccess.csproj
@@ -14,25 +14,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="Contexts\" />
-    <None Remove="Configurations\" />
-    <None Remove="Interfaces\" />
-    <None Remove="Repositories\" />
-    <None Remove="UnitOfWork\" />
-    <None Remove="Migrations\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Contexts\" />
-    <Folder Include="Configurations\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Repositories\" />
-    <Folder Include="UnitOfWork\" />
-    <Folder Include="Migrations\" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Web.AdvertisementApp.Common\Web.AdvertisementApp.Common.csproj" />
     <ProjectReference Include="..\Web.AdvertisementApp.Entities\Web.AdvertisementApp.Entities.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Migrations\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 </Project>
