--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Web.AdvertisementApp.UI.csproj
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Web.AdvertisementApp.UI.csproj
@@ -12,6 +12,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    <PackageReference Include="System.Console" Version="4.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Web.AdvertisementApp.Business\Web.AdvertisementApp.Business.csproj">
@@ -23,6 +25,9 @@
     <Content Remove="wwwroot\js\" />
     <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\css\" />
     <Content Remove="wwwroot\images\" />
+    <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\01.jpg" />
+    <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\03.jpg" />
+    <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\02.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
