--- a/Web.AdvertisementApp/Web.AdvertisementApp.UI/Web.AdvertisementApp.UI.csproj
+++ b/Web.AdvertisementApp/Web.AdvertisementApp.UI/Web.AdvertisementApp.UI.csproj
@@ -28,6 +28,7 @@
     <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\01.jpg" />
     <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\03.jpg" />
     <Content Remove="wwwroot\themes\startbootstrap-one-page-wonder-gh-pages\assets\img\02.jpg" />
+    <Content Remove="wwwroot\cvFiles\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\css\" />
@@ -38,11 +39,16 @@
     <Folder Include="Models\" />
     <Folder Include="Views\Account\" />
     <Folder Include="ValidationRules\" />
+    <Folder Include="Views\Advertisement\" />
+    <Folder Include="wwwroot\cvFiles\" />
+    <Folder Include="Views\Application\" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Extensions\" />
     <None Remove="Models\" />
     <None Remove="Views\Account\" />
     <None Remove="ValidationRules\" />
+    <None Remove="Views\Advertisement\" />
+    <None Remove="Views\Application\" />
   </ItemGroup>
 </Project>
